<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/common_title_bar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/text_RegisterActivity_account"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/register_activity_account"
            android:textSize="18sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/text_RegisterActivity_account"
            android:background="@null"
            android:hint="@string/register_activity_input_account"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/text_RegisterActivity_account"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/register_activity_password"
            android:textSize="18sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/text_RegisterActivity_account"
            android:background="@null"
            android:hint="@string/register_activity_input_password"
            android:textSize="18sp" />
    </RelativeLayout>
    
     <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />
     
     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/text_RegisterActivity_account"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/register_activity_confirm_password"
            android:textSize="18sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/text_RegisterActivity_account"
            android:background="@null"
            android:hint="@string/register_activity_again_password"
            android:textSize="18sp" />
    </RelativeLayout>
    
     <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />
     
     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/text_RegisterActivity_account"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/register_activity_device_name"
            android:textSize="18sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/text_RegisterActivity_account"
            android:background="@null"
            android:hint="@string/register_activity_input_device_name"
            android:textSize="18sp" />
    </RelativeLayout>
    
     <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />
     
     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/text_RegisterActivity_account"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/register_activity_telephone"
            android:textSize="18sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/text_RegisterActivity_account"
            android:background="@null"
            android:hint="@string/register_activity_input_telephone"
            android:textSize="18sp" />
    </RelativeLayout>
    
     <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

</LinearLayout>