<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fill_parent_vertical"
    android:background="@color/gray_two">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/blue_one"
        android:text="@string/add_device_way_dialog_way"
        android:textSize="22sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/blue_one" />

    <TextView
        android:id="@+id/text_add_device_dialog_saomiao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:background="@color/gray_dnine"
        android:text="@string/add_device_way_dialog_saomiao"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line" />
    
    <TextView
        android:id="@+id/text_add_device_dialog_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:background="@color/gray_two"
        android:text="@string/add_device_way_dialog_manual"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_add_device_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_dialog"
            android:text="@string/add_device_way_dialog_cancel"
            android:textSize="16sp"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/gray_line" />

        <Button
            android:id="@+id/button_add_device_dialog_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="@drawable/selector_bg_dialog"
            android:text="@string/add_device_way_dialog_sure"
            />
    </LinearLayout>

</LinearLayout>
