<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fill_parent_vertical"
    android:background="@color/gray_two" >

    <include layout="@layout/common_title_bar" />

    <View style="@style/fill_gray_line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/text_UpdatePasswrodActivity_old"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/update_password_activity_old"
            android:textSize="18sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/text_UpdatePasswrodActivity_old"
            android:background="@null"
            android:hint="@string/update_password_activity_inputold"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/text_UpdatePasswrodActivity_new"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/update_password_activity_new"
            android:textSize="18sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/text_UpdatePasswrodActivity_new"
            android:background="@null"
            android:hint="@string/update_password_activity_inputnew"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/text_UpdatePasswrodActivity_confirm"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/register_activity_confirm_password"
            android:textSize="18sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/text_UpdatePasswrodActivity_confirm"
            android:background="@null"
            android:hint="@string/update_password_activity_againpassword"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

    <RelativeLayout
        android:id="@+id/relative_UpdatePasswrodActivity_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/selector_relative_confirm" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/update_password_activity_confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>