<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fill_parent_vertical"
    android:background="@color/gray_two">
    
    <include layout="@layout/common_title_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/wifi_net_activity_netinfo"
        android:textColor="@color/gray_one"
        android:textSize="16sp" />

    <View style="@style/fill_gray_line_no_space" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/text_WifiNetActivity_text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/wifi_net_activity_net"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_WifiNetActivity_wifitext"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/text_WifiNetActivity_text"
            android:background="@null"
            android:hint="@string/wifi_net_activity_inputnetname"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:background="@color/gray_line" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/text_WifiNetActivity_passtext"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/register_activity_password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_WifiNetActivity_wifipasstext"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/text_WifiNetActivity_passtext"
            android:background="@null"
            android:hint="@string/wifi_net_activity_wifipass"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

    <RelativeLayout
        android:id="@+id/relative_WifiNetActivity_wifilink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/selector_relative_confirm" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/wifi_activity_wifilink"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>
