<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fill_parent_vertical"
    android:background="@color/gray_two">
    
    <TextView
        android:id="@+id/text_update_head_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/blue_one"
        android:text="@string/update_head_dialog_headname"
        android:textSize="22sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/blue_one" />

    <TextView
        android:id="@+id/text_update_head_dialog_takephoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:background="@drawable/selector_bg_dialog"
        android:text="@string/update_head_dialog_takephoto"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line" />
    
    <TextView
        android:id="@+id/text_update_head_dialog_photochoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:background="@drawable/selector_bg_dialog"
        android:text="@string/update_head_dialog_photochoose"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_update_head_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_dialog"
            android:text="@string/add_device_way_dialog_cancel"
            android:textSize="16sp"
            />

    </LinearLayout>

</LinearLayout>
